fix: make standalone checkboxes inside grid better aligned by adding class "standalone", fix: carbon-checkbox has by default wrong padding for some reason

--- a/bread/static/design/carbon_design/scss/components/checkbox/_checkbox.scss
+++ b/bread/static/design/carbon_design/scss/components/checkbox/_checkbox.scss
@@ -53,7 +53,7 @@
     position: relative;
     display: flex;
     min-height: rem(24px);
-    padding-left: rem(20px);
+    padding-left: rem(26px);
     line-height: 1.5rem;
     cursor: pointer;
     user-select: none;
