--- a/bread/static/design/carbon_design/scss/styles.scss
+++ b/bread/static/design/carbon_design/scss/styles.scss
@@ -114,3 +114,9 @@ td .bx--form-item {
         }
     }
 }
+
+// make standalone checkboxes appear better alligned:
+.bx--form-item.bx--checkbox-wrapper.standalone {
+    height: 5rem;
+    justify-content: center;
+}
